--- a/Restaurante.Ang/ClientApp/app/components/restaurante/restaurante.component.html
+++ b/Restaurante.Ang/ClientApp/app/components/restaurante/restaurante.component.html
@@ -1,42 +1,46 @@
 ﻿<div>
     <h1>Restaurantes</h1>
 </div>
-
-<div class="col-md-6">
-    <h3>Lista</h3>
-    <table class="table">
-        <tr>
-            <td>Id</td>
-            <td>Nome</td>
-            <td>-</td>
-        </tr>
-        <tr *ngFor="let restaurante of restaurantes">
-            <td>{{ restaurante.id }}</td>
-            <td>{{ restaurante.nome }}</td>
-            <td><button class="btn-primary" (click)="edit(restaurante)">Editar</button>&nbsp;&nbsp;<button class="btn-danger" (click)="delete(restaurante)">Remover</button></td>
-        </tr>
-    </table>
-</div>
-<div class="col-md-6">
-    <h3>{{ formLabel }}</h3>
-    <form [formGroup]="rform" (ngSubmit)="onSubmit()">
-        <div class="form-horizontal">
-            <div class="form-group">
-                <label class="control-label pull-left">Nome</label>
-                <div class="col-xs-12 col-sm-6">
-                    <input type="text" formControlName="nome" class="form-control"  />
-                </div>
+<section *ngIf="!postback">
+    <div class="col-md-12">
+        <div class="options well">
+            <div class="form-group" [formGroup]="fPesquisa">
+                <label>Nome do Restaurante:</label>
+                <input type="text" class="form-control" formControlName="nomePesquisa" />
             </div>
-            <div class="form-group">
-                <div class="col-md-2">
-                    <button type="submit" [disabled]="!form.valid" class="btn-success">Salvar</button>
-                </div>
-                <div class="col-md-2">
-                    <button type="button" (click)="cancel()" class="btn-default">Cancelar</button>
-
-                </div>
-            </div>
+            <button class="btn btn-default" (click)="search()"><i class="glyphicon-search"></i> Pesquisar</button>
+            <button class="btn btn-success" (click)="novo()"><i class="glyphicon-plus"></i> Novo Restaurante</button>
         </div>
+        <h3>Lista</h3>
+        <table class="table">
+            <tr>
+                <td>Id</td>
+                <td>Nome</td>
+                <td>-</td>
+            </tr>
+            <tr *ngFor="let restaurante of restaurantes">
+                <td>{{ restaurante.id }}</td>
+                <td>{{ restaurante.nome }}</td>
+                <td><button class="btn btn-primary" (click)="edit(restaurante)">Editar</button>&nbsp;&nbsp;<button class="btn btn-danger" (click)="delete(restaurante.id)">Remover</button></td>
+            </tr>
+        </table>
+    </div>
+</section>
+<section *ngIf="postback">
+    <div id="formularioRestaurante" >
+        <h3>{{ formLabel }}</h3>
+        <form [formGroup]="rform" (ngSubmit)="onSubmit()">
+            <div class="form-horizontal">
+                <div class="form-group">
+                    <label class="control-label pull-left">Nome</label>
+                    <div class="col-xs-12 col-sm-6">
+                        <input type="text" formControlName="nome" class="form-control" />
+                    </div>
+                </div>
+                <button type="submit" [disabled]="!form.valid" class="btn btn-success">Salvar</button>
+                <button type="button" (click)="cancel()" class="btn btn-default">Cancelar</button>
+            </div>
+        </form>
+    </div>
+</section>
 
-    </form>
-</div>
